# mnemosyne

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mnemosyne.env.example
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coderabbit-reviewed.yml  release.yml
deploy/observability/: otel-collector.yaml  prometheus.yml
deploy/reverse-proxy/: nginx.conf
docs/: ARCHITECTURE.md  DIAGRAM.mmd  coderabbit-smoke-test.md  configuration.md  kb-providers.md  mcp.md
docs/ADRs/: 001-monorepo-structure.md  002-mit-license.md  003-diataxis-classification.md  004-llm-abstraction.md  005-human-review-governance.md  006-mcp-intake-only.md  007-kb-layer-pluggability.md  008-mcp-transport-and-client-compatibility.md  009-standalone-ui-container.md  010-source-first-ui.md  011-tiered-review-model.md  012-container-decomposition.md  013-api-contract-versioning.md  014-vector-index-pluggability.md  015-persistence-layout.md  016-standalone-proxy-container.md  017-instance-directory.md  018-kb-owned-templates.md  019-template-declared-review-tiers.md  020-adversarial-adjudication.md  TEMPLATE.md  template.md
docs/deployment/: docker-compose.md
examples/templates/: README.md
examples/templates/explanation/: adr.md  concept.md  design.md  postmortem.md  requirements.md  rfc.md  strategy.md
examples/templates/how-to/: checklist.md  playbook.md  recipe.md  runbook.md  sop.md
examples/templates/reference/: catalogue.md  changelog.md  glossary.md  principle.md  standard.md
examples/templates/tutorials/: induction.md  primer.md  walkthrough.md
mnemo-core/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
mnemo-core/mnemo_core/: __init__.py  auth.py  config.py  evaluation.py  jobs.py  models.py  self_audit.py
mnemo-core/mnemo_core/api/: app.py  audit.py  auth.py  deps.py  limits.py
mnemo-core/mnemo_core/api/routers/: __init__.py  audit.py  health.py  ingest.py  jobs.py  process.py  publish.py  sources.py  webhooks.py
mnemo-core/mnemo_core/api/v1/: __init__.py  audit.py  index.py  ingest.py  jobs.py  process.py  publish.py  sources.py  webhooks.py
mnemo-core/mnemo_core/embeddings/: __init__.py  base.py  factory.py  ollama.py  openai_compat.py
mnemo-core/mnemo_core/indexing/: __init__.py  chunk.py  github.py  service.py
mnemo-core/mnemo_core/llm/: anthropic.py  base.py  factory.py  ollama.py  openai_compat.py
mnemo-core/mnemo_core/mcp/: server.py
mnemo-core/mnemo_core/observability/: logging.py  telemetry.py
mnemo-core/mnemo_core/pipeline/: __init__.py  classify.py  dedup.py  git.py  markdown.py  parse.py  prompts.py  publish.py  review.py  runner.py  templates.py
mnemo-core/mnemo_core/vector/: __init__.py  base.py  factory.py  sqlite_vec.py
mnemo-core/tests/: conftest.py  test_adversarial_review.py  test_api_audit.py  test_api_index.py  test_api_ingest.py  test_api_process.py  test_api_publish.py  test_auth.py  test_chunk.py  test_classify.py  test_classify_parse.py  test_config.py  test_dedup.py  test_deps.py  test_embedding_factory.py  test_evaluation.py  test_git_helpers.py  test_git_publish.py  test_index_stubs.py  test_indexer.py  test_jobs.py  test_limits_and_health.py  test_llm_anthropic.py  test_llm_factory.py  test_mcp_tools.py  test_pipeline_runner.py  test_templates.py  test_vector_factory.py  test_vector_sqlite.py  test_webhooks.py
mnemo-curator/: Dockerfile  README.md  pyproject.toml
mnemo-curator/mnemo_curator/: cli.py  core_client.py  frontmatter.py  github.py  inspector.py  issue_trackers.py  models.py  resolver.py  semantic.py  service.py  settings.py
mnemo-curator/tests/: test_cli.py  test_frontmatter.py  test_github.py  test_inspector.py  test_issue_trackers.py  test_resolver.py  test_semantic.py  test_service.py  test_settings.py
mnemo-proxy/: Dockerfile  README.md  nginx.conf
mnemo-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
mnemo-ui/scripts/: build.mjs
mnemo-ui/src/: api.js  config.js  main.js  markdown.js  mock-data.js  render.js  security.js  state.js  storage.js  styles.css
mnemo-ui/tests/: static-smoke.mjs
