[project]
name = "mnemo-core"
version = "2.1.0"
description = "Mnemosyne ingestion engine — REST API, MCP server, and document processing pipeline"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Paul Booth" },
]
keywords = [
    "documentation",
    "knowledge-base",
    "llm",
    "mcp",
    "diataxis",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.10",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.20",
    "mcp>=1.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/pabooth/mnemosyne"
Documentation = "https://github.com/pabooth/mnemosyne/tree/main/docs"
Issues = "https://github.com/pabooth/mnemosyne/issues"
Source = "https://github.com/pabooth/mnemosyne"

[project.scripts]
mnemo-evaluate = "mnemo_core.evaluation:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8,<1",
]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemo_core"]

[tool.hatch.build]
exclude = [
    "/.venv",
    "/.tmp-docker-venv",
    "/data",
    "/dist",
    "/.pytest_cache",
]
