[project]
name = "mnemo-curator"
version = "1.1.0"
description = "Mnemosyne knowledge-base inspection and resolution service"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Paul Booth" },
]
keywords = [
    "documentation",
    "knowledge-base",
    "curation",
    "diataxis",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
]

[project.urls]
Homepage = "https://github.com/pabooth/mnemosyne"
Documentation = "https://github.com/pabooth/mnemosyne/tree/main/docs"
Issues = "https://github.com/pabooth/mnemosyne/issues"
Source = "https://github.com/pabooth/mnemosyne"

[project.scripts]
mnemo-curator = "mnemo_curator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8,<1",
]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemo_curator"]

[tool.hatch.build]
exclude = [
    "/.venv",
    "/dist",
    "/.pytest_cache",
]
